
0.9.10f Nov 30, 2005
 * Bulgarian translation by Victor Keranov
 * updated formatting of statitstics when --show-stats|-S is in use
 * updated Russian and Unkrainian translations
 * made --install-set ignore excluded packages
 * added --prompt|-p option to always prompt (Kanedaaa)

0.9.10e Oct 14, 2005
 * removed duplicate slapt_add_exclude_to_transaction() calls
 * fixed hardcoded mirror setting in PACKAGES.TXT regression
 * updated Portuguese_Portugal translation from Miguel

0.9.10d Oct 02, 2005
 * added slapt_remove_exclude() to compliment slapt_add_exclude()
 * changed slapt_init_regex() to return slapt_regex_t *
 * changed slapt_init_transaction() to return slapt_transaction_t *
 * added libslapt.3 manpage
 * added reference to Stefano Stabellini's PACKAGES.TXT with dependency
   information to FAQ #10.
 * introduced --install-set option to install whole disk sets
 * fixed naming of data cache file for uncompressed PACKAGES.TXT
 * updated the package data download to save on disk i/o
 * created a doc/ directory for the man pages
 * added Russian and Unkrainian translations (and man pages) by sin of the DeepStyle team
 * updated files for 10.2
 * updated Vietnamese translation from Vu
 * updated Portuguese_Portugal translation from Miguel

0.9.10c Aug 31, 2005
 * French translation update by solsTiCe d'Hiver
 * added --no-upgrade so that packages (such as the kernel) can be installed
   side by side with an existing version.  This disables the check for --install
   arguments that automatically selects the package for upgrade.
 * added slapt_remove_source to compliment slapt_add_source 
 * updated withlibslapt make target, and the library naming convention 
   from libslapt-$(VERSION).so to libslapt.so.$(VERSION)
 * updated pt_PT translation from Miguel
 * updated prompting to better handling input for autoclean and transaction
   accepting.

0.9.10b Aug 09, 2005
 * updated download output 