@@ -465,9 +465,33 @@ void slapt_pkg_action_upgrade_all(const slapt_rc_config *global_config)
   tran = slapt_init_transaction();
 
   if ( global_config->dist_upgrade == SLAPT_TRUE ) {
+    char *essential[] = {"glibc-solibs","sed","pkgtools",NULL};
+    int epi = 0;
     struct slapt_pkg_list *matches =
       slapt_search_pkg_list(avail_pkgs,SLAPT_SLACK_BASE_SET_REGEX);
 
+    /* make sure the essential packages are installed/upgraded first */
+    while ( essential[epi] != NULL ) {
+      slapt_pkg_info_t *inst_pkg = NULL;
+      slapt_pkg_info_t *avail_pkg = NULL;
+
+      inst_pkg = slapt_get_newest_pkg(installed_pkgs,essential[epi]);
+      avail_pkg = slapt_get_newest_pkg(avail_pkgs,essential[epi]);
+
+      /* can we upgrade */
+      if ( inst_pkg != NULL && avail_pkg != NULL ) {
+        if (slapt_cmp_pkgs(inst_pkg,avail_pkg) < 0 ) {
+          slapt_add_upgrade_to_transaction(tran,inst_pkg,avail_pkg);
+        }
+      /* if not try to install */
+      } else if ( avail_pkg != NULL ) {
+        slapt_add_install_to_transaction(tran,avail_pkg);
+      }
+
+      ++epi;
+    }
+
+    /* loop through SLAPT_SLACK_BASE_SET_REGEX packages */
     for (i = 0; i < matches->pkg_count; ++i) {
       slapt_pkg_info_t *installed_pkg = NULL;
       slapt_pkg_info_t *newer_avail_pkg = NULL;
